Post method removed, records added